--- a/src/styles.css
+++ b/src/styles.css
@@ -58,3 +58,12 @@ footer {
     padding: 2rem;
     color: #000000;
 }
+
+.rounded-circle {
+    width: 180px;
+    height: 180px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
