--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,9 +1,16 @@
 <div class="info-title" id="experiencia">
     <h4 class="title">Experiencia</h4>
-    <ul>
+    <ul *ngIf="!loading; else elseExperience">
         <div *ngFor="let i of experiences">
             <li><b>{{ i.projectName }}</b></li>
             <p>{{ i.description }}</p>
         </div>
     </ul>
+    <ng-template #elseExperience>
+        <div class="text-center mt-3">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </ng-template>
 </div>
