--- a/src/app/components/knowledge/knowledge.component.html
+++ b/src/app/components/knowledge/knowledge.component.html
@@ -1,9 +1,16 @@
 <div class="info-title" id="conocimientos">
     <h4 class="title">Conocimientos</h4>
-    <ul>
+    <ul *ngIf="!loading; else elseKnowledge">
         <div *ngFor="let i of knowledges">
             <li><b>{{ i.area }}</b></li>
             <p>{{ i.technologies }}</p>
         </div>
     </ul>
+    <ng-template #elseKnowledge>
+        <div class="text-center mt-3">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </ng-template>
 </div>
