--- a/src/app/components/extra-project/extra-project.component.html
+++ b/src/app/components/extra-project/extra-project.component.html
@@ -4,22 +4,31 @@
         <h4>Otros proyectos</h4>
       </div>
       <!--Saltarina Project-->
-      <div class="project mt-3" [id]="i.idProject" *ngFor="let i of projects">
-        <div class="p-4">
-            <div class="row">
-                <div class="col">
-                    <h5>{{ i.name }}</h5>
-                    <p>{{ i.description }}</p>
-                </div>
-                <div class="text-center col">
-                    <img [src]="i.previewImg" width="100%">
-                </div>
-            </div>
-            <div class="mt-2">
-                <a [href]="i.urlRepo" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                <a [href]="i.urlSite" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
-            </div>
+      <div *ngIf="!loading; else elseExtraProjects">
+        <div class="project mt-3" [id]="i.idProject" *ngFor="let i of projects">
+          <div class="p-4">
+              <div class="row">
+                  <div class="col">
+                      <h5>{{ i.name }}</h5>
+                      <p>{{ i.description }}</p>
+                  </div>
+                  <div class="text-center col">
+                      <img [src]="i.previewImg" width="100%">
+                  </div>
+              </div>
+              <div class="mt-2">
+                  <a [href]="i.urlRepo" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
+                  <a [href]="i.urlSite" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
+              </div>
+          </div>
         </div>
       </div>
+      <ng-template #elseExtraProjects>
+        <div class="text-center mt-3">
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </ng-template>
     </div>
   </section>
