--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -23,24 +23,32 @@
             </button>
         </div>
 
-        <!--Matanga! Project-->
-        <div class="project mt-3" [id]="i.idProject" *ngFor="let i of projects">
-            <div class="p-4">
-                <div class="row">
-                    <div class="col">
-                        <h5>{{ i.name }}</h5>
-                        <p>{{ i.description }}</p>
+        <!-- Projects -->
+        <div *ngIf="!loading; else elseProjects">
+            <div class="project mt-3" [id]="i.idProject" *ngFor="let i of projects">
+                <div class="p-4">
+                    <div class="row">
+                        <div class="col">
+                            <h5>{{ i.name }}</h5>
+                            <p>{{ i.description }}</p>
+                        </div>
+                        <div *ngIf="i.previewImg != ''" class="text-center col">
+                            <img [src]="i.previewImg" width="100%">
+                        </div>
                     </div>
-                    <div *ngIf="i.previewImg != ''" class="text-center col">
-                        <img [src]="i.previewImg" width="100%">
+                    <div class="mt-2">
+                        <a [href]="i.urlRepo" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
+                        <a *ngIf="i.urlSite != ''" [href]="i.urlSite" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
                     </div>
-                </div>
-                <div class="mt-2">
-                    <a [href]="i.urlRepo" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                    <a *ngIf="i.urlSite != ''" [href]="i.urlSite" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
                 </div>
             </div>
         </div>
-
+        <ng-template #elseProjects>
+            <div class="text-center mt-3">
+                <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </ng-template>
     </div>
 </section>
