--- a/src/app/backoffice/forms/contacts/contacts.component.html
+++ b/src/app/backoffice/forms/contacts/contacts.component.html
@@ -5,26 +5,28 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
                 Crear contacto
             </button>
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Id Contact</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">url</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let i of contacts">
-                        <th scope="row">{{ i.idContact }}</th>
-                        <td>{{ i.data }}</td>
-                        <td>{{ i.name }}</td>
-                        <td>{{ i.url }}</td>
-                        <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
-                        <td><button type="button" class="btn btn-primary" (click)="deleteContact(i.idContact!)">Delete</button></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Id Contact</th>
+                            <th scope="col">Data</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">url</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let i of contacts">
+                            <th scope="row">{{ i.idContact }}</th>
+                            <td>{{ i.data }}</td>
+                            <td>{{ i.name }}</td>
+                            <td>{{ i.url }}</td>
+                            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
+                            <td><button type="button" class="btn btn-primary" (click)="deleteContact(i.idContact!)">Delete</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <!-- Create Project Modal -->
             <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
