--- a/src/app/backoffice/forms/knowledges/knowledges.component.html
+++ b/src/app/backoffice/forms/knowledges/knowledges.component.html
@@ -5,24 +5,26 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
                 Crear conocimiento
             </button>
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Id Knowledge</th>
-                        <th scope="col">area</th>
-                        <th scope="col">technologies</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let i of knowledges">
-                        <th scope="row">{{ i.idKnowledge }}</th>
-                        <td>{{ i.area }}</td>
-                        <td>{{ i.technologies }}</td>
-                        <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
-                        <td><button type="button" class="btn btn-primary" (click)="deleteKnowledge(i.idKnowledge!)">Delete</button></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Id Knowledge</th>
+                            <th scope="col">area</th>
+                            <th scope="col">technologies</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let i of knowledges">
+                            <th scope="row">{{ i.idKnowledge }}</th>
+                            <td>{{ i.area }}</td>
+                            <td>{{ i.technologies }}</td>
+                            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
+                            <td><button type="button" class="btn btn-primary" (click)="deleteKnowledge(i.idKnowledge!)">Delete</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <!-- Create Project Modal -->
             <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
