--- a/src/app/backoffice/forms/projects/projects.component.html
+++ b/src/app/backoffice/forms/projects/projects.component.html
@@ -5,32 +5,34 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">
                 Crear proyecto
             </button>
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Carátula</th>
-                        <th scope="col">URL Repo</th>
-                        <th scope="col">URL Site</th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let i of projects">
-                        <th scope="row">{{ i.idProject }}</th>
-                        <td>{{ i.name }}</td>
-                        <td>{{ i.description }}</td>
-                        <td>{{ i.previewImg }}</td>
-                        <td>{{ i.urlRepo }}</td>
-                        <td>{{ i.urlSite }}</td>
-                        <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
-                        <td><button type="button" class="btn btn-primary" (click)="deleteProject(i.idProject!)">Delete</button></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Id</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Carátula</th>
+                            <th scope="col">URL Repo</th>
+                            <th scope="col">URL Site</th>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let i of projects">
+                            <th scope="row">{{ i.idProject }}</th>
+                            <td>{{ i.name }}</td>
+                            <td>{{ i.description }}</td>
+                            <td>{{ i.previewImg }}</td>
+                            <td>{{ i.urlRepo }}</td>
+                            <td>{{ i.urlSite }}</td>
+                            <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" (click)="setUpdateFormValues(i)">Update</button></td>
+                            <td><button type="button" class="btn btn-primary" (click)="deleteProject(i.idProject!)">Delete</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <!-- Create Project Modal -->
             <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
