--- a/src/styles.css
+++ b/src/styles.css
@@ -67,3 +67,15 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+.is-required:after {
+    content: '*';
+    margin-left: 3px;
+    color: red;
+    font-weight: bold;
+}
+
+.table-responsive {
+    max-height: 200px;
+    overflow: scroll;
+}
